# spp-assignments

./: .gitignore  README.md
2d-convolution-cuda/: README.md
2d-convolution-cuda/src/: CMakeLists.txt
matrix-matrix-mulitply/: README.md
matrix-matrix-mulitply/src/: main.cpp
matrix-vector-multiply/: Makefile  README.md  mvm_bw.c  mvm_omp_v1.c  mvm_omp_v2.c  mvm_omp_vec.c  mvm_original.c  mvm_vec_1.c  mvm_vec_2.c  stream.c
src/: CMakeLists.txt  main.cpp  main.cu
